Virtual environments post: fix layout shift
https://web.dev/optimize-cls/
https://web.dev/optimize-cls/#images-without-dimensions
https://css-tricks.com/aspect-ratio-boxes/
https://css-tricks.com/oh-hey-padding-percentage-is-based-on-the-parent-elements-width/
https://developer.mozilla.org/en-US/docs/Web/CSS/padding#values
https://developer.mozilla.org/en-US/docs/Web/CSS/percentage
https://developer.mozilla.org/en-US/docs/Web/CSS/position

--- a/_includes/the.css
+++ b/_includes/the.css
@@ -262,6 +262,22 @@ img {
   margin: 0 -7.5px;
 }
 
+div.confined-img-aspect-ratio-box {
+  position: relative;
+  margin: 0 -7.5px;
+  background: #ddd;
+}
+
+.aspect-ratio-box-inside {
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
+body.dark div.confined-img-aspect-ratio-box {
+  background: #333;
+}
+
 /* See <https://css-tricks.com/NetMag/FluidWidthVideo/Article-FluidWidthVideo.php>. */
 div.youtube-wrapper {
   position: relative;
